--- a/reservas/templates/usuario/crear_usuario.html
+++ b/reservas/templates/usuario/crear_usuario.html
@@ -9,6 +9,7 @@
     </div>
     <div class="card-body">
         <h4 class="card-title">Datos del usuario</h4>
+        <div>{{ formulario1}}</div>
         {% include 'usuario/form_usuario.html' %}
     </div>
     <div class="card-footer text-muted">
