--- a/reservas/templates/usuario/editar_usuario.html
+++ b/reservas/templates/usuario/editar_usuario.html
@@ -1,18 +1,18 @@
 {% extends "plantilla.html" %}
-{% block titulo %} Editar Reserva{% endblock %}
+{% block titulo %} Editar Reserva {% endblock %}
 
 {% block contenido %} 
 
 <div class="card">
     <div class="card-header">
-        Editar crear_usuario
+        Editar Usuario
     </div>
     <div class="card-body">
         <h4 class="card-title">Datos del usuario</h4>
         {% include 'usuario/form_usuario.html' %}
     </div>
     <div class="card-footer text-muted">
-       
+        
     </div>
 </div>
 
