--- a/reservas/templates/salon/form_reserva.html
+++ b/reservas/templates/salon/form_reserva.html
@@ -24,5 +24,6 @@
     {% endfor %}
 
     <input name="" id="" class="btn btn-success" type="submit" value="Enviar">
+    <a name="" id="" class="btn btn-primary" href="{% url 'reserva' %}" role="button">Cancelar</a>
 
 </form>
