--- a/reservas/templates/solicitudes/reservas_solicitadas.html
+++ b/reservas/templates/solicitudes/reservas_solicitadas.html
@@ -18,7 +18,7 @@
                     <th>Teléfono</th>
                     <th>Ciudad</th>
                     <th>Fecha evento</th>
-                    <th>Cantidad personas</th>
+                    <th>Cantidad_personas</th>
                     <th>Motivo</th>
                 </tr>
             </thead>
@@ -32,7 +32,7 @@
                     <td>{{ reserva.fecha }}</td>
                     <td>{{ reserva.no_personas }}</td>
                     <td>{{ reserva.motivo }}</td>
-                    <td> <td><a name="" id="" class="btn btn-info" href="" role="button">Editar</a> 
+                    <td> <td><a name="" id="" class="btn btn-warning" href="" role="button">Editar</a> 
                         | 
                         <a name="" id="" class="btn btn-danger" href="#" role="button">Eliminar</a></td></td>
                 </tr>
