--- a/reservas/templates/usuario/form_usuario.html
+++ b/reservas/templates/usuario/form_usuario.html
@@ -23,6 +23,7 @@
     {% endfor %}
 
     <input name="" id="" class="btn btn-success" type="submit" value="Enviar">
+    <a name="" id="" class="btn btn-primary" href="{% url 'usuario' %}" role="button">Cancelar</a>
 
 </form>
 
