--- a/reservas/templates/usuario/lista_usuario.html
+++ b/reservas/templates/usuario/lista_usuario.html
@@ -34,7 +34,7 @@
                     <td>{{ cliente.departamento }}</td>
                     <td>{{ cliente.ciudad }}</td>
                     <td>{{ cliente.edad }}</td>
-                        <td><a name="" id="" class="btn btn-info" href="{% url 'editar_usuario' cliente.id_cliente %}" role="button">Editar</a> 
+                        <td><a name="" id="" class="btn btn-warning" href="{% url 'editar_usuario' cliente.id_cliente %}" role="button">Editar</a> 
                         | 
                         <a name="" id="" class="btn btn-danger" href="{% url 'eliminaru' cliente.id_cliente %}" role="button">Eliminar</a>
                     </td>
