--- a/reservas/templates/salon/lista_reserva.html
+++ b/reservas/templates/salon/lista_reserva.html
@@ -28,7 +28,7 @@
                     <td>{{ reserva.motivo }}</td>
                     <td>{{ reserva.observaciones }}<td>
                     <td>{{ reserva.estado }}</td>
-                    <td> <td><a name="" id="" class="btn btn-info" href="{% url 'editar_reserva' reserva.id_solicitud %}" role="button">Editar</a> 
+                    <td> <td><a name="" id="" class="btn btn-warning" href="{% url 'editar_reserva' reserva.id_solicitud %}" role="button">Editar</a> 
                         | 
                         <a name="" id="" class="btn btn-danger" href="{% url 'eliminarr' reserva.id_solicitud %}" role="button">Eliminar</a></td>
                     </td>
