--- a/reservas/templates/plantilla.html
+++ b/reservas/templates/plantilla.html
@@ -19,7 +19,7 @@
             <a class="nav-item nav-link active" href="{% url 'usuario' %}">Usuarios</a>
             <a class="nav-item nav-link active" href="{% url 'reserva' %}">Reserva</a>
             <a class="nav-item nav-link active" href="{% url 'reservas_solicitadas' %}">Solicitudes</a>
-            <a class="nav-item nav-link active" href="{% url 'registro' %}" style="margin-left: 1070px;">Salir</a>
+            <a class="nav-item nav-link active" href="{% url 'login' %}" style="margin-left: 1070px;">Salir</a>
         </div>
     </nav>
 
