--- a/reservas/templates/paginas/login_usuarios.html
+++ b/reservas/templates/paginas/login_usuarios.html
@@ -9,32 +9,42 @@
     <title>Document</title>
 </head>
 <body>
-<br><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6 offset-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 style="text-align: center;">ingresa tus datos</h2>
-                        <hr>
-                        <form action="" method="post">
-                            {% csrf_token %}
-                            <div class="mb-3">
-                              <label for="" class="form-label">Name</label>
-                              <input type="text"class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-
-                              <label for="" class="form-label">Password</label>
-                              <input type="password"class="form-control" name="" id="" aria-describedby="helpId" placeholder="">
-                            </div>
-                            <a href="{% url 'inicio' %}" class="btn btn-primary"> Ingresar </a>
-                            <a href="{% url 'registro' %}" class="btn btn-success"> Registrarse </a>
-                        </form>
-                        <br>
+    <form action="post">
+        {% csrf_token %}
+        <section class="vh-100" style="background-color: #8da8da;">
+            <div class="container py-5 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                    <div class="card-body p-5 text-center">
+        
+                    <h3 class="mb-5">Your data</h3>
+        
+                    <div class="form-outline mb-4">
+                        <input type="email" id="" class="form-control form-control-lg" name="correo" required/>
+                        <label class="form-label" for="typeEmailX-2">Email</label>
+                    </div>
+        
+                    <div class="form-outline mb-4">
+                        <input type="password" id="" class="form-control form-control-lg" name="password" required/>
+                        <label class="form-label" for="typePasswordX-2">Password</label>
+                    </div>
+        
+                    <div class="form-check d-flex justify-content-start mb-4">
+                        <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                        <label class="form-check-label" for="form1Example3"> Remember password </label>
+                    </div>
+        
+                    <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+        
+                    <hr class="my-4">
+                    <a href="{% url 'registro' %}" class="btn btn-success btn-lg btn-block"> Check in </a>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
-    </div>
-    
+            </div>
+        </section>
+    </form>     
 </body>
 </html>
