cambio_method_post

--- a/reservas/templates/paginas/login_usuarios.html
+++ b/reservas/templates/paginas/login_usuarios.html
@@ -9,7 +9,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="post">
+    <form action="" method="post">
         {% csrf_token %}
         <section class="vh-100" style="background-color: #8da8da;">
             <div class="container py-5 h-100">
