--- a/reservas/templates/login/registro.html
+++ b/reservas/templates/login/registro.html
@@ -5,49 +5,53 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+
     <title>Document</title>
 </head>
-<body style="background-color: #8da8da;">
-    <br><br>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-md-6 offset-md-3">
-                <div class="card">
-                    <div class="card-body">
-                        <h2 style="text-align: center;"> Tus datos</h2>
-                        <form enctype="multipart/form-data" method="post">
+<body>
+    <form action="" method="post">
+        {% csrf_token %}
+        <section class="vh-100" style="background-color: #3f4b63;">
+            <div class="container py-8 h-100">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col-14 col-md-10 col-lg-4 col-xl-6">
+                <div class="card shadow-4-strong" style="border-radius: 1rem;">
+                    <div class="card-body p-4 text-center">
+        
+                    <h3 class="mb-5">Enter your data</h3>
+                    
+                    <div class="form-outline mb-4">
+                        <label for="id_username" class="form-label" for="typeEmailX-2">Username</label>
+                        <input type="text" id="id_username" class="form-control form-control-lg" name="username" required/>
+                    </div>
+        
+                    <div class="form-outline mb-4">
+                        <label for="id_password1" class="form-label" for="typePasswordX-2">Password</label>
+                        <input type="password" id="id_password1" class="form-control form-control-lg" name="password1" required/>
+                    </div>
 
-                            {% csrf_token %}
-                        
-                            {% for campo in formulario3 %}
-                        
-                              <div class="mb-3">
-                                <label for="" class="form-label">{{ campo.label }}</label>
-                                <input 
-                                type="{% if campo.label == 'Password' %}{{ 'password' }}{% else %}{{ 'text' }}{% endif %}" 
-                                class="form-control" 
-                                name="{{ campo.name}}" 
-                                id="" 
-                                aria-labelledby="helpId"
-                                placeholder="{{ campo.label }}"
-                                value="{{ campo.value | default:'' }}"
-                                />
-                              </div>
-                              <div class="col-12 help-text">{{ campo.errors }}</div>
-                                {% endfor %}
-                        
-                            <input name="" id="" class="btn btn-success" type="submit" value="Enviar">
-                            <a name="" id="" class="btn btn-primary" href="{% url 'login' %}" role="button">Cancelar</a>
-                        
-                        </form>
-                        <br>
+                    <div class="form-outline mb-4">
+                        <label for="id_password2" class=" form-label" for="typePasswordX-2">Confirm Password</label>
+                        <input type="password" id="id_password2" class="form-control form-control-lg" name="password2" required/>
+                    </div>
+        
+                    <div class="form-check d-flex justify-content-start mb-4">
+                        <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
+                        <label class="form-check-label" for="form1Example3"> Remember password </label>
+                    </div>
+        
+                    <button class="btn btn-success btn-lg btn-block" type="submit">Registrarse</button>
+        
+                    <hr class="my-4">
+                    <a href="{% url 'login' %}" class="btn btn-primary btn-lg btn-block">Login</a>
                     </div>
                 </div>
+                </div>
             </div>
-        </div>
-    </div>
+            </div>
+        </section>
+    </form>     
 </body>
 </html>
-
 
 
