--- a/reservas/templates/paginas/login_usuarios.html
+++ b/reservas/templates/paginas/login_usuarios.html
@@ -21,13 +21,13 @@
                     <h3 class="mb-5">Your data</h3>
         
                     <div class="form-outline mb-4">
-                        <input type="email" id="" class="form-control form-control-lg" name="correo" required/>
                         <label class="form-label" for="typeEmailX-2">Email</label>
+                        <input type="text" id="" class="form-control form-control-lg" name="username" required/>
                     </div>
         
                     <div class="form-outline mb-4">
-                        <input type="password" id="" class="form-control form-control-lg" name="password" required/>
                         <label class="form-label" for="typePasswordX-2">Password</label>
+                        <input type="password" id="" class="form-control form-control-lg" name="password" required/>
                     </div>
         
                     <div class="form-check d-flex justify-content-start mb-4">
