--- a/reservas/templates/login/registro.html
+++ b/reservas/templates/login/registro.html
@@ -19,26 +19,26 @@
                     <div class="card-body p-4 text-center">
         
                     <h3 class="mb-5">Enter your data</h3>
-                    
-                    <div class="form-outline mb-4">
+                    {{formulario}}
+                    <!-- <div class="form-outline mb-4">
                         <label for="id_username" class="form-label" for="typeEmailX-2">Username</label>
                         <input type="text" id="id_username" class="form-control form-control-lg" name="username" required/>
                     </div>
         
                     <div class="form-outline mb-4">
-                        <label for="id_password1" class="form-label" for="typePasswordX-2">Password</label>
+                        <label class="form-label" for="typePasswordX-2">Password</label>
                         <input type="password" id="id_password1" class="form-control form-control-lg" name="password1" required/>
                     </div>
 
                     <div class="form-outline mb-4">
-                        <label for="id_password2" class=" form-label" for="typePasswordX-2">Confirm Password</label>
+                        <label class=" form-label" for="typePasswordX-2">Confirm Password</label>
                         <input type="password" id="id_password2" class="form-control form-control-lg" name="password2" required/>
                     </div>
         
                     <div class="form-check d-flex justify-content-start mb-4">
                         <input class="form-check-input" type="checkbox" value="" id="form1Example3" />
-                        <label class="form-check-label" for="form1Example3"> Remember password </label>
-                    </div>
+                        <label class="form-check-label"> Remember password </label>
+                    </div> -->
         
                     <button class="btn btn-success btn-lg btn-block" type="submit">Registrarse</button>
         
